# curso-python

./: .gitignore  README.md  activar.bat  activar.ps1  limpiar.bat  limpiar.py  pyproject.toml  requirements.txt  setup.py
notebooks/: 01_introduccion_python.ipynb
src/: __init__.py  ejemplo_problematico.py  ejemplo_tipos.py  main.py  utils.py
tests/: __init__.py  test_utils.py
